Bug 3510: replace Windows specific "rundll" invocations with call to DialogUtils.browserLauncher( )
svn path=/vcell/trunk/VCell/; revision=17385